--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   dio: ^5.7.0
   dartz: ^0.10.1
+  go_router: ^14.3.0
 
 dev_dependencies:
   flutter_test:
