--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   dio: ^5.7.0
   dartz: ^0.10.1
   go_router: ^14.3.0
+  flutter_screenutil: ^5.9.3
 
 dev_dependencies:
   flutter_test:
