--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   dartz: ^0.10.1
   go_router: ^14.3.0
   flutter_screenutil: ^5.9.3
+  flutter_bloc: ^8.1.6
 
 dev_dependencies:
   flutter_test:
