--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,12 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
+
+flutter_assets:
+  assets_path: assets/
+  output_path: lib/core/utils/
+  filename: assets.dart
+
 version: 1.0.0+1
 
 environment:
@@ -40,6 +46,7 @@ dependencies:
   go_router: ^14.3.0
   flutter_screenutil: ^5.9.3
   flutter_bloc: ^8.1.6
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
