--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   flutter_svg: ^2.0.10+1
   google_fonts: ^6.2.1
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
