--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   flutter_svg: ^2.0.10+1
   google_fonts: ^6.2.1
   flutter_dotenv: ^5.2.1
+  connectivity_plus: ^6.1.0
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
