--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,29 +33,24 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  connectivity_plus: ^6.1.0
+  cupertino_icons: ^1.0.8
+  dartz: ^0.10.1
+  dio: ^5.7.0
   flutter:
     sdk: flutter
-  
-  flutter_localizations:
-       sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-  dio: ^5.7.0
-  dartz: ^0.10.1
-  go_router: ^14.3.0
-  flutter_screenutil: ^5.9.3
   flutter_bloc: ^8.1.6
-  flutter_svg: ^2.0.10+1
-  google_fonts: ^6.2.1
   flutter_dotenv: ^5.2.1
-  connectivity_plus: ^6.1.0
+  flutter_localizations:
+    sdk: flutter
+  flutter_screenutil: ^5.9.3
+  flutter_svg: ^2.0.10+1
+  get_it: ^8.0.2
+  go_router: ^14.3.0
+  google_fonts: ^6.2.1
   shared_preferences: ^2.3.2
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -63,6 +58,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  flutter_test:
+    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -77,7 +74,6 @@ flutter:
   assets:
     - assets/icons/
     - lib/.env # path to your .env
-    
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
   # For details regarding adding assets from package dependencies, see
