--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  awesome_snackbar_content: ^0.1.4
   connectivity_plus: ^6.1.0
   cupertino_icons: ^1.0.8
   dartz: ^0.10.1
