--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   get_it: ^8.0.2
   go_router: ^14.3.0
   google_fonts: ^6.2.1
+  loading_animation_widget: ^1.3.0
   shared_preferences: ^2.3.2
 
 dev_dependencies:
