--- a/lib/.env
+++ b/lib/.env
@@ -1,1 +1,1 @@
-Base_Url = "http://gp-gswq07u5g-nouranmohsens-projects.vercel.app/"
+Base_Url = "https://gp-gswq07u5g-nouranmohsens-projects.vercel.app/auth/"
