added web cached newtwork package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   awesome_snackbar_content: ^0.1.4
+  cached_network_image: ^3.4.1
   connectivity_plus: ^6.1.0
   cupertino_icons: ^1.0.8
   dartz: ^0.10.1
