--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,8 +50,10 @@ dependencies:
   get_it: ^8.0.2
   go_router: ^14.3.0
   google_fonts: ^6.2.1
+  http_parser: ^4.0.2
   image_picker: ^1.1.2
   loading_animation_widget: ^1.3.0
+  mime: ^2.0.0
   shared_preferences: ^2.3.3
 
 dev_dependencies:
