--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   image_picker: ^1.1.2
   loading_animation_widget: ^1.3.0
   mime: ^2.0.0
+  modal_progress_hud_nsn: ^0.5.1
   shared_preferences: ^2.3.3
 
 dev_dependencies:
