--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ environment:
 dependencies:
   awesome_snackbar_content: ^0.1.4
   cached_network_image: ^3.4.1
+  chat_bubbles: ^1.6.0
   connectivity_plus: ^6.1.0
   cupertino_icons: ^1.0.8
   dartz: ^0.10.1
