--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   loading_animation_widget: ^1.3.0
   mime: ^2.0.0
   modal_progress_hud_nsn: ^0.5.1
+  persistent_bottom_nav_bar: ^6.2.1
   shared_preferences: ^2.3.3
 
 dev_dependencies:
