--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   persistent_bottom_nav_bar: ^6.2.1
   shared_preferences: ^2.3.3
   shimmer: ^3.0.0
+  socket_io_client: ^3.1.1
 
 dev_dependencies:
 
