--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   modal_progress_hud_nsn: ^0.5.1
   persistent_bottom_nav_bar: ^6.2.1
   searchfield: ^1.2.7
+  share_plus: ^11.0.0
   shared_preferences: ^2.3.3
   shimmer: ^3.0.0
   socket_io_client: ^3.1.1
