--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  audioplayers: ^6.5.0
   awesome_snackbar_content: ^0.1.4
   cached_network_image: ^3.4.1
   chat_bubbles: ^1.6.0
